Updated API description. Modified HTTP POST method to return status 201.
Updated the API description documentation to include the paths for /api/tasks/device/. Modified the method that handles the endpoint /api/tasks/create to return HTTP status 201 CREATED instead of 200 OK - to be more consistent with good practices.
