# api.yml
@@ -17,7 +17,7 @@ definitions:
     properties:
       $ref: '#/definitions/MaintenanceTaskList'
 
-  MaintenanceTaskList:
+  maintenanceTaskList:
     type: array
     items:
       $ref: '#/definitions/MaintenanceTask'
@@ -49,30 +49,43 @@ definitions:
         type: string
         description: Datetime string, registration time for the task
         example: 2022-08-28T17:32:11.058674
+
+  MaintenanceTaskResponse:
+    type: object
+    properties:
+      $ref: '#/definitions/MaintenanceTask'
       _links:
-        type: object
-        properties:
-          self:
-            type: object
-            properties:
-              href:
-                type: string
-                description: Hyperlink to this task
-                example: http://localhost:8080/api/tasks/733
-          tasks:
-            type: object
-            properties:
-              href:
-                type: string
-                description: Hyperlink to the tasks page that shows all tasks
-                example: http://localhost:8080/api/tasks
-          deviceId:
-            type: object
-            properties:
-              href:
-                type: string
-                description: Hyperlink to the page that shows all the tasks for this task's attached device
-                example: http://localhost:8080/api/tasks/deviceId/1
+        type: object:
+          schema:
+            $ref: '#/definitions/MaintenanceTaskLinks'
+
+  MaintenanceTaskLinks:
+    type: object
+      properties:
+        _links:
+          type: object
+          properties:
+            self:
+              type: object
+              properties:
+                href:
+                  type: string
+                  description: Hyperlink to this task
+                  example: http://localhost:8080/api/tasks/733
+            tasks:
+              type: object
+              properties:
+                href:
+                  type: string
+                  description: Hyperlink to the API endpoint that retrieves all tasks
+                  example: http://localhost:8080/api/tasks
+            deviceId:
+              type: object
+              properties:
+                href:
+                  type: string
+                  description: Hyperlink to the API endpoint that retrieves all the tasks for this task's attached device
+                  example: http://localhost:8080/api/tasks/deviceId/1
 paths:
   /tasks:
     get:
@@ -84,11 +97,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/definitions/MaintenanceTaskList'
+                $ref: '#/definitions/maintenanceTaskList'
 
   /tasks/{taskId}:
     get:
       summary: Returns a single task based on the given ID
+      produces: application/json
       parameters:
         - in: path
           name: taskId
@@ -97,7 +111,6 @@ paths:
             type: integer
             minimum: 1
           description: The task ID
-      produces: application/json
       responses:
         200:
           description: OK
@@ -109,6 +122,16 @@ paths:
           description: Task not found
     put:
       summary: Modifies a single task based on the given ID
+      parameters:
+        - in: body
+          schema:
+            $ref: '#/definitions/MaintenanceTask'
+          required:
+            - id
+            - deviceId
+            - description
+            - status
+            - severity
       consumes: application/json
       produces: application/json
       responses:
@@ -118,14 +141,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/definitions/MaintenanceTask'
-                required:
-                  - id
-                  - deviceId
-                  - status
-                  - severity
-                  - description
         404:
           description: Task not found
+        404:
+          description: Factory device not found
+        400:
+          description: Bad request
     delete:
       summary: Deletes the specified task
       produces: application/json
@@ -141,11 +162,32 @@ paths:
       consumes: application/json
       produces: application/json
       responses:
-        200:
-          description: OK
+        201:
+          description: CREATED
           content:
             application/json:
               schema:
                 $ref: '#/definitions/MaintenanceTask'
         404:
           description: Factory device not found
+  
+  /tasks/device/{deviceId}:
+    parameters:
+      - in: path
+        name: deviceId
+        required: true
+        schema:
+          type: integer
+          minimum: 1
+        description: The device ID
+    
+    get:
+      summary: Retrieves all the tasks associated with this device
+      produces: application/jso
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/definitions/maintenanceTaskList'
